# SphereBot

./: CMakeLists.txt
atttinysoftware/ftdi/: flaskserver.py  hello.ftdi.44.echo.c  hello.ftdi.44.echo.c.hex  hello.ftdi.44.echo.out  index.html  rx.py
atttinysoftware/ftdi/static/: index.html
atttinysoftware/ledbutton/: button.44.c  button.44.c.hex  button.44.make  button.44.out  multiplexer.44.c
atttinysoftware/ledstrip/: button.44.c  button.44.c.hex  button.44.make  button.44.out
atttinysoftware/lightsensorreader/: sensorreader.44.c  sensorreader.44.c.hex  sensorreader.44.make  sensorreader.44.out
atttinysoftware/motorcontroller/: button.44.c  button.44.c.hex  button.44.out
atttinysoftware/multiplexer/: multiplexer.44.c  multiplexer.44.c.hex  multiplexer.44.make  multiplexer.44.out
atttinysoftware/wififtdi/: hello.ftdi.44.echo.c  hello.ftdi.44.echo.c.hex  hello.ftdi.44.echo.out  sketch_dec05a.ino  term.py
raspberrypisoftware/processinginterface/: processinginterface.pde
